--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google-signin-scope" content="profile email">
-    <meta name="google-signin-client_id" content="140775046717-s7l0aj6b4bh9skb7n8san7hlsvna2r43.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="140775046717-.apps.googleusercontent.com">
     
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="https://apis.google.com/js/platform.js"></script>
